--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -4,154 +4,166 @@
 {% load staticfiles %}
 
 {% block content %}
+
     <div class="container-fluid">
         {% if user.is_authenticated %}
-    <div class="row">
-            <h1><i class="zmdi zmdi-shape"> </i>Ver Material </h1>
+            <div class="row">
+                <h1><i class="zmdi zmdi-shape"> </i>Ver Material </h1></div>
             <div class="col-10">
-                                    <br>
-                                    <a href="{% url 'material:crear' %}">
-                                        <button type="button"
-                                                class="btn btn-bordred-success waves-effect  width-md waves-light">Nuevo
-                                            Material
-                                        </button>
-                                    </a>
-                                </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <br>
+            </div>
+
+            {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            <div class="row">
+                <div class="col-10">
+
+                    <div id="datatable_filter" class="dataTables_filter"><label>Search:<input
+                            type="search" class="form-control form-control-sm" placeholder=""
+                            aria-controls="datatable"></label></div>
+
+                </div>
+                <div class="col">
                     <br>
-                        <div class="card-box">
-
-                                <div align="left">
-                                    <div id="datatable_filter" class="dataTables_filter"><label>Search:<input
-                                            type="search" class="form-control form-control-sm" placeholder=""
-                                            aria-controls="datatable"></label></div>
-                                </div>
-
-
-                            <table class="table table-hover table-dark">
-                                <tbody>
-
-
-                                <div class="content">
-
-                                    <!-- Start Content-->
-                                    <div class="container-fluid">
-
-                                        <div class="row">
-                                            <div class="col-12">
-
-
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-12 col-md-6">
-                                            <div id="datatable_filter" class="dataTables_filter">
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <table id="datatable"
-                                                   class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed"
-                                                   role="grid" aria-describedby="datatable_info">
-
-                                                <thead>
-                                                <tr role="row" align="center">
-                                                    <th scope="col">
-                                                        Id
-                                                    </th>
-                                                    <th scope="col">
-                                                        Nombre
-                                                    </th>
-                                                    <th scope="col">
-                                                        Descripción
-                                                    </th>
-                                                    <th scope="col">
-                                                        Cantidad
-                                                    </th>
-                                                    <th scope="col">
-                                                        Editar
-                                                    </th>
-                                                    <th scope="col">
-                                                        Eliminar
-                                                    </th>
-                                                </thead>
-
-
-                                                <tbody align="center">
-                                                {% for material in materiales %}
-
-                                                    <tr role="row" class="odd">
-                                                        <td tabindex="0" class="sorting_1">{{ material.id }}</td>
-                                                        <td>{{ material.nombre }}</td>
-                                                        <td>{{ material.descripcion }}</td>
-                                                        <td>{{ material.cantidad }}</td>
-                                                        <td><a
-                                                                href="{% url 'material:editar_material_view' material.id %}">
-                                                            <button class="btn btn-success"><i class="fas fa-edit"></i>
-                                                            </button>
-                                                        </a></td>
-                                                        <td><a href="#delete-modal-{{ material.id }}"
-                                                               data-animation="blur"
-                                                               data-plugin="custommodal"
-                                                               data-overlaycolor="#36404a">
-                                                            <button type="button" class="btn btn-danger"
-                                                                    data-toggle="modal"
-                                                                    data-target="#modalConfirmacion"><i
-                                                                    class="fas fa-trash"></i></button>
-                                                        </a></td>
-                                                    </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-
-                                    <!-- ##########View US39##### -->
-                                    {% for material in materiales %}
-
-                                        <div id="delete-modal-{{ material.id }}" class="modal-demo">
-                                            <button type="button" class="close" onclick="Custombox.modal.close();">
-                                                <span>×</span><span class="sr-only">Close</span>
-                                            </button>
-                                            <h4 class="custom-modal-title">Eliminar el material
-                                                <span>{{ material.nombre }}</span>?</h4>
-                                            <div class="custom-modal-text">
-                                                Quieres eliminar el material {{ material.nombre }} permanentemente?
-                                                <form action="#" data-parsley-validate="" novalidate="">
-                                                    <div class="form-group text-right mb-0">
-                                                        <button class="btn btn-danger waves-effect waves-light mr-1"
-                                                                type="submit">
-                                                            <a href="{% url 'material:delete_material' material.id %}">Eliminar</a>
-                                                        </button>
-                                                        <button type="reset"
-                                                                class="btn btn-secondary waves-effect waves-light"
-                                                                onclick="Custombox.modal.close();">
-                                                            Cancelar
-                                                        </button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-
-                                        <!-- US39 -->
-
-
-
-
-                                    {% endfor %}
-
-
-                                </div> <!-- end row -->
-                                </tbody>
-                            </table>
-                        </div> <!-- container-fluid -->
-                    </div>
+                    <a href="{% url 'material:crear' %}">
+                        <button type="button"
+                                class="btn btn-bordred-success waves-effect  width-md waves-light">Agregar Material
+                        </button>
+                    </a>
                 </div>
             </div>
-            </div>
+            <table class="table table-hover table-dark">
+                <tbody>
+
+
+                <div class="content">
+
+                    <!-- Start Content-->
+
+
+                    <div class="row">
+                        <div class="col-12">
+
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div id="datatable_filter" class="dataTables_filter">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <table id="datatable"
+                               class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed"
+                               role="grid" aria-describedby="datatable_info">
+
+                            <thead>
+                            <tr role="row" align="center">
+                                <th scope="col">
+                                    Id
+                                </th>
+                                <th scope="col">
+                                    Nombre
+                                </th>
+                                <th scope="col">
+                                    Descripción
+                                </th>
+                                <th scope="col">
+                                    Cantidad
+                                </th>
+                                <th scope="col">
+                                    Editar
+                                </th>
+                                <th scope="col">
+                                    Eliminar
+                                </th>
+                            </thead>
+
+
+                            <tbody align="center">
+                            {% for material in materiales %}
+
+                                <tr role="row" class="odd">
+                                    <td tabindex="0" class="sorting_1">{{ material.id }}</td>
+                                    <td>{{ material.nombre }}</td>
+                                    <td>{{ material.descripcion }}</td>
+                                    <td>{{ material.cantidad }}</td>
+                                    <td><a
+                                            href="{% url 'material:editar_material_view' material.id %}">
+                                        <button class="btn btn-success"><i class="fas fa-edit"></i>
+                                        </button>
+                                    </a></td>
+                                    <td><a href="#delete-modal-{{ material.id }}"
+                                           data-animation="blur"
+                                           data-plugin="custommodal"
+                                           data-overlaycolor="#36404a">
+                                        <button type="button" class="btn btn-danger"
+                                                data-toggle="modal"
+                                                data-target="#modalConfirmacion"><i
+                                                class="fas fa-trash"></i></button>
+                                    </a></td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <!-- ##########View US39##### -->
+                {% for material in materiales %}
+
+                    <div id="delete-modal-{{ material.id }}" class="modal-demo">
+                        <button type="button" class="close" onclick="Custombox.modal.close();">
+                            <span>×</span><span class="sr-only">Close</span>
+                        </button>
+                        <h4 class="custom-modal-title">Eliminar el material
+                            <span>{{ material.nombre }}</span>?</h4>
+                        <div class="custom-modal-text">
+                            Quieres eliminar el material {{ material.nombre }} permanentemente?
+                            <form action="#" data-parsley-validate="" novalidate="">
+                                <div class="form-group text-right mb-0">
+                                    <button class="btn btn-danger waves-effect waves-light mr-1"
+                                            type="submit">
+                                        <a href="{% url 'material:delete_material' material.id %}">Eliminar</a>
+                                    </button>
+                                    <button type="reset"
+                                            class="btn btn-secondary waves-effect waves-light"
+                                            onclick="Custombox.modal.close();">
+                                        Cancelar
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- US39 -->
+
+
+
+
+                {% endfor %}
+
+
+                </tbody>
+            </table>
+            </div> <!-- container-fluid -->
+
+
+
 
 
 
