--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -4,102 +4,120 @@
 {% block content %}
     <!--  ########View US04#######  -->
     <!--  ########View US03#######  -->
-         <div class="container">
-    {% if user.is_authenticated %}
-        <div class="container-fluid">
-        <h1> <i class="zmdi zmdi-shape"> </i>Ver Inventario </h1>
+    <div class="container">
+        {% if user.is_authenticated %}
+            <div class="container-fluid">
+                <h1><i class="zmdi zmdi-shape"> </i>Ver Inventario </h1>
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
+                <table class="table table-hover table-dark">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Ajustes</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
-        <table class="table table-hover table-dark">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Ajustes</th>
-            </tr>
-          </thead>
-        <tbody>
+                    {% for Inventario in inventarios %}
 
-        {% for Inventario in inventarios %}
+                        <tr>
+                            <th scope="row">{{ Inventario.id }}</th>
+                            <td>{{ Inventario.nombre }}</td>
+                            <td>
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-secondary dropdown-toggle waves-effect"
+                                            data-toggle="dropdown" aria-expanded="false"><i
+                                            class="mdi mdi-chevron-down"></i></button>
+                                    <div class="dropdown-menu" x-placement="bottom-start"
+                                         style="position: absolute; transform: translate3d(0px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
+                                        <!-- item-->
+                                        <a href="#editar-modal-{{ Inventario.id }}" class="dropdown-item"
+                                           data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Editar</a>
+                                        <!-- item-->
+                                        <a href="#delete-modal-{{ Inventario.id }}" class="dropdown-item"
+                                           data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Eliminar</a>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
 
-            <tr>
-              <th scope="row">{{ Inventario.id }}</th>
-              <td>{{ Inventario.nombre }}</td>
-                <td>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-secondary dropdown-toggle waves-effect" data-toggle="dropdown" aria-expanded="false"> <i class="mdi mdi-chevron-down"></i> </button>
-                        <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
-                            <!-- item-->
-                            <a href="#editar-modal-{{ Inventario.id }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Editar</a>
-                            <!-- item-->
-                            <a href="#delete-modal-{{ Inventario.id }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Eliminar</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-
-        {% endfor %}
-        <!--  ########View US03#######  -->
-        <!--  ########View US04####### -->
-        </tbody>
-        </table>
-        </div>
-            <a href="{% url 'inventario:crear_inventario' %}"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir</button></a>
-        </div>
-
-        <!-- ##########View US03##### -->
-        {% for Inventario in inventarios %}
-
-            <div id="delete-modal-{{ Inventario.id }}" class="modal-demo">
-            <button type="button" class="close" onclick="Custombox.modal.close();">
-                <span>×</span><span class="sr-only">Close</span>
-            </button>
-            <h4 class="custom-modal-title">Eliminar el inventario <span>{{ Inventario.nombre }}</span>?</h4>
-            <div class="custom-modal-text">
-                Quieres eliminar el inventario {{ Inventario.nombre }} permanentemente?
-                <form action="#" data-parsley-validate="" novalidate="">
-                    <div class="form-group text-right mb-0">
-                        <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
-                            <a href="{% url "inventario:delete_inventario" Inventario.id %}">Eliminar</a>
-                        </button>
-                        <button type="reset" class="btn btn-secondary waves-effect waves-light" onclick="Custombox.modal.close();">
-                            Cancelar
-                        </button>
-                    </div>
-                </form>
+                    {% endfor %}
+                    <!--  ########View US03#######  -->
+                    <!--  ########View US04####### -->
+                    </tbody>
+                </table>
             </div>
-        </div>
+            <a href="{% url 'inventario:crear_inventario' %}">
+                <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir</button>
+            </a>
+            </div>
 
-        <!-- US08 -->
+            <!-- ##########View US03##### -->
+            {% for Inventario in inventarios %}
 
-            <div id="editar-modal-{{ Inventario.id }}" class="modal-demo">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el inventario {{Inventario.nombre}}</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="Custombox.modal.close();">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                        <form method="post" action="{% url "inventario:editar_inventario" Inventario.id %}">
-                            {% csrf_token %}
-                            <div class="modal-body">
-                                {{ form.as_p }}
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" onclick="Custombox.modal.close();">Cancelar</button>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                          </div>
+                <div id="delete-modal-{{ Inventario.id }}" class="modal-demo">
+                    <button type="button" class="close" onclick="Custombox.modal.close();">
+                        <span>×</span><span class="sr-only">Close</span>
+                    </button>
+                    <h4 class="custom-modal-title">Eliminar el inventario <span>{{ Inventario.nombre }}</span>?</h4>
+                    <div class="custom-modal-text">
+                        Quieres eliminar el inventario {{ Inventario.nombre }} permanentemente?
+                        <form action="#" data-parsley-validate="" novalidate="">
+                            <div class="form-group text-right mb-0">
+                                <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
+                                    <a href="{% url "inventario:delete_inventario" Inventario.id %}">Eliminar</a>
+                                </button>
+                                <button type="reset" class="btn btn-secondary waves-effect waves-light"
+                                        onclick="Custombox.modal.close();">
+                                    Cancelar
+                                </button>
+                            </div>
                         </form>
                     </div>
-                  </div>
-            </div>
-        <!-- US08 -->
+                </div>
 
-        {% endfor %}
+                <!-- US08 -->
+
+                <div id="editar-modal-{{ Inventario.id }}" class="modal-demo">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el
+                                inventario {{ Inventario.nombre }}</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                                    onclick="Custombox.modal.close();">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <form method="post" action="{% url "inventario:editar_inventario" Inventario.id %}">
+                                {% csrf_token %}
+                                <div class="modal-body">
+                                    {{ form.as_p }}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" onclick="Custombox.modal.close();">
+                                        Cancelar
+                                    </button>
+                                    <button type="submit" class="btn btn-primary">Guardar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!-- US08 -->
+
+            {% endfor %}
 
 
 
-    {% else %}
-    <h1>No estas autenticado</h1>
-    {% endif %}
+        {% else %}
+            <h1>No estas autenticado</h1>
+        {% endif %}
 
-    {% endblock %}
+{% endblock %}
