--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -18,7 +18,8 @@
             <div class="col-md-8 offset-lg-2">
                 <div class="row">
                     <div class="col mb-3">
-                        <button class="btn btn-info" type="button" data-toggle="modal" data-target="#modalCancel">Regresar</button>
+                        <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel"><i
+                                class="fas fa-arrow-left"></i></button>
                     </div>
                 </div>
                 <div class="row">
@@ -29,10 +30,10 @@
                                 {{ form.as_p }}
                                 <div class="row">
                                     <div class="col-md-2">
-                                        <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#modalCancel">Cancelar</button>
+                                        <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#modalCancel">Cancelar</button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-primary waves-effect waves-light" type="submit">Crear</button>
+                                        <a><button class="btn btn-success waves-effect waves-light" type="submit">Guardar</button></a>
                                     </div>
                                 </div>
                             </form>
@@ -50,7 +51,7 @@
                 <p>Se ha creado la ambulancia {{ ambulancia_nombre }}</p>
               </div>
               <div class="modal-footer">
-                <a href="/ambulancia/crear/" class="btn btn-primary">Aceptar</a>
+                <a href="/ambulancia/crear/" class="btn btn-success">Aceptar</a>
               </div>
             </div>
           </div>
@@ -70,8 +71,8 @@
                 <p>¿Desea salir sin guardar los cambios?</p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar editando</button>
-                  <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-primary">Salir sin guardar</a>
+                <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+                  <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-danger    ">Salir sin guardar</a>
               </div>
             </div>
           </div>
