--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
-
+<div class="container-fluid">
     <h1>Ambulancias</h1>
     {% if messages %}
         <ul class="messages">
@@ -10,13 +10,13 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <div class="container-fluid">
+
         <div class="row">
             <div class="col-lg-12">
-                <div class="card-box">
-                    <div clas="row">
+
+                    <div align="right" clas="row">
                         <a href="{% url "ambulancia:crear" %}" type="button"
-                           class="btn btn-bordred-info waves-effect  width-md waves-light">Crear nueva ambulancia</a>
+                                class="btn btn-bordred-success waves-effect  width-md waves-light"><i class="fas fa-plus"></i> Agregar Ambulancia</a>
                     </div>
                     <br>
                     <table class="table table-hover table-dark">
@@ -84,7 +84,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+
         </div>
     </div>
+
 {% endblock %}
