--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -4,12 +4,18 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     <div class="row">
         <div class="col text-center m-3">
-                <h1>Agregar material a {{ nombre_inventario }}</h1>
+            <h1>Agregar material a {{ nombre_inventario }}</h1>
         </div>
     </div>
     <div class="container-fluid">
@@ -17,7 +23,9 @@
             <div class="col-md-8 offset-lg-2">
                 <div class="row">
                     <div class="col mb-3">
-                        <button class="btn btn-info" type="button" data-toggle="modal" data-target="#modalCancel">Regresar</button>
+                        <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel">
+                            <i class="fas fa-arrow-left"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="row">
@@ -28,10 +36,13 @@
                                 {{ form.as_p }}
                                 <div class="row">
                                     <div class="col-md-2">
-                                        <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#modalCancel">Cancelar</button>
+                                        <button class="btn btn-danger" type="button" data-toggle="modal"
+                                                data-target="#modalCancel">Cancelar
+                                        </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-primary waves-effect waves-light" type="submit">Guardar</button>
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
+                                        </button>
                                     </div>
                                 </div>
                             </form>
@@ -42,57 +53,62 @@
         </div>
 
         {% if status == "CREATED" %}
-        <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <p>Se han agregado {{ cantidad }} unidades de {{ nombre_material }}  a {{ nombre_inventario }}</p>
-              </div>
-              <div class="modal-footer">
-                <a href="/inventario/{{ id_inventario }}/" class="btn btn-primary">De acuerdo</a>
-              </div>
+            <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <p>Se han agregado {{ cantidad }} unidades de {{ nombre_material }}
+                                a {{ nombre_inventario }}</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="/inventario/{{ id_inventario }}/" class="btn btn-primary">De acuerdo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <script>
-            $("#modalSaved").modal({
-                backdrop: "static",
-                keyboard: false
-            });
-        </script>
+            <script>
+                $("#modalSaved").modal({
+                    backdrop: "static",
+                    keyboard: false
+                });
+            </script>
         {% elif status == "UPDATED" %}
-        <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <p>Se han agregado {{ cantidad }} unidades de {{ nombre_material }}  a {{ nombre_inventario }} </p>
-              </div>
-              <div class="modal-footer">
-                <a href="/inventario/{{ id_inventario }}/" class="btn btn-primary">De acuerdo</a>
-              </div>
+            <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <p>Se han agregado {{ cantidad }} unidades de {{ nombre_material }}
+                                a {{ nombre_inventario }} </p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="{% url 'inventario:material_inventario' id_inventario %}"><button class="btn btn-success">De acuerdo</button></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <script>
-            $("#modalSaved").modal({
-                backdrop: "static",
-                keyboard: false
-            });
-        </script>
+            <script>
+                $("#modalSaved").modal({
+                    backdrop: "static",
+                    keyboard: false
+                });
+            </script>
         {% endif %}
 
         <div class="modal" id="modalCancel" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-body">
-                <p>Si sales ahora no se guardará el material nuevo</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar editando</button>
-                  <a href="/inventario/{{ id_inventario }}/" class="btn btn-primary">Salir sin guardar</a>
-              </div>
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p>Si sales ahora no se guardará el material nuevo</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{% url 'inventario:material_inventario' id_inventario %}">
+                            <button class="btn btn-danger">Salir sin guardar</button>
+                        </a>
+                        <button type="button" class="btn btn-success" data-dismiss="modal">Continuar editando</button>
+
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
     </div>
     <div id="suggestions">
@@ -108,7 +124,7 @@
             {% for material in lista_materiales %}
                 "{{ material.nombre }}",
             {% endfor %}
-            ];
+        ];
         // get the text input for the material name
         let input = document.getElementById("id_material");
         // avoid browser from showing the default autocomplete
@@ -121,7 +137,7 @@
         suggestions.style.overflowY = "auto";
         // function for clearing the suggestions
         clear = (element) => {
-            while(element.hasChildNodes()){
+            while (element.hasChildNodes()) {
                 element.removeChild(element.firstChild)
             }
         };
@@ -134,31 +150,31 @@
             // clear whatever was inside suggestions
             clear(suggestions);
             // if the user has written something
-            if(input.value.length > 0){
+            if (input.value.length > 0) {
                 materials
-                    // get material names that match what is in the input
-                .filter((material) => material.includes(input.value))
-                .forEach((material) => {
-                    // create a new suggestion
-                    let suggestion  = document.createElement("div");
-                    // this makes it look like a button with borders and makes it
-                    // have the same width as the input
-                    suggestion.className = "btn btn-outline-primary btn-block m-0";
-                    suggestion.innerText = material;
-                    // when a suggestion is clicked, the text in the input gets updated,
-                    // the suggestions are erased and their height is reset
-                    suggestion.onclick = () => {
-                        input.value = material;
-                        clear(suggestions);
-                        // this is needed since the height gets fixed to a specific value
-                        // when the matches number exceeds a limit
-                        suggestions.style.height = "auto";
-                    };
-                    suggestions.appendChild(suggestion);
-                    matches++;
-                });
+                // get material names that match what is in the input
+                    .filter((material) => material.includes(input.value))
+                    .forEach((material) => {
+                        // create a new suggestion
+                        let suggestion = document.createElement("div");
+                        // this makes it look like a button with borders and makes it
+                        // have the same width as the input
+                        suggestion.className = "btn btn-outline-primary btn-block m-0";
+                        suggestion.innerText = material;
+                        // when a suggestion is clicked, the text in the input gets updated,
+                        // the suggestions are erased and their height is reset
+                        suggestion.onclick = () => {
+                            input.value = material;
+                            clear(suggestions);
+                            // this is needed since the height gets fixed to a specific value
+                            // when the matches number exceeds a limit
+                            suggestions.style.height = "auto";
+                        };
+                        suggestions.appendChild(suggestion);
+                        matches++;
+                    });
             }
-            if(matches > MATCHES_LIMIT){
+            if (matches > MATCHES_LIMIT) {
                 // fix the height of the suggestions div for the automatic scrollbar to appear
                 suggestions.style.height = SUGGESTIONS_HEIGHT;
             } else {
